--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en-us">
   <head>
     <title>Top Spotify Tracks Album Display</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
@@ -21,6 +21,9 @@
         <div id="user-settings">
         </div>
         <div id="album-art">
+        </div>
+        <div id="obtain-new-token">
+          <input class="btn btn-primary contrast-style" type="submit" value="Refresh Token">
         </div>
       </div>
     </div>
@@ -50,7 +53,7 @@
         </div>
         </div>
         <div>
-          <input class="btn btn-primary" type="submit" value="Submit">
+          <input class="btn btn-primary contrast-style" type="submit" value="Submit">
         </div>
       </form>
     </script>
